Fix vertical alignment in Firefox

--- a/packages/admin/src/styles/_globalOverrides.sass
+++ b/packages/admin/src/styles/_globalOverrides.sass
@@ -6,7 +6,7 @@ html, body
 
 body
 	font-family: $font-family-base
-	line-height: 1.5
+	line-height: var(--cui-line-height)
 	margin: 0
 	padding: 0
 	font-smoothing: antialiased
