--- a/packages/ui/src/styles/_customProperties.sass
+++ b/packages/ui/src/styles/_customProperties.sass
@@ -8,6 +8,7 @@
 	--cui-transition-duration--slow: 600ms
 	--cui-transition-duration--slowest: 800ms
 
+	--cui-line-height: 1.5
 	--cui-font-size-heading: #{em(16px)}
 	--cui-font-size-body: #{em(14px)}
 	--cui-font-size-label: #{em(13px)}
