--- a/packages/ui/src/styles/components/select.sass
+++ b/packages/ui/src/styles/components/select.sass
@@ -13,6 +13,8 @@
 	-webkit-appearance: none
 	padding-left: var(--cui-padding-horizontal)
 	padding-right: var(--cui-min-height)
+	padding-bottom: calc((var(--cui-min-height) - var(--cui-control-line-height) * 1em) / 2)
+	padding-top: calc((var(--cui-min-height) - var(--cui-control-line-height) * 1em) / 2)
 
 	&::-ms-expand
 		display: none
